sandbox/output
StringCalculator.java:17: error: variable result might not have been initialized
            return result ;
                   ^
1 error
